@@ -33,6 +33,8 @@ version 1.6.0 Thu Aug 24 by luispedro
 	* Fix bug with cleanup in dict_store not providing the number of removed records
 	* Add 'jug cleanup --keep-locks' to remove obsolete results without affecting locks
 	* jug.backend.base_store has 1 new method 'listlocks'
+	* jug.backend.base_lock has 2 new methods 'fail' and 'is_failed'
+	* Add 'jug execute --keep-failed' to preserve locks on failing tasks.
 
 version 1.5.0 Sun Jul 16 2017 by luispedro
 	* Add 'demo' subcommand
